--- a/products.css
+++ b/products.css
@@ -106,7 +106,7 @@
 }
 
 /* Responsive adjustments */
-@media (max-width: 850px) {
+@media (max-width: 768px) {
     .title{
         margin-top: 0;
     }
@@ -139,7 +139,7 @@
 
 @media (max-width: 480px) {
     .product-grid {
-        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+        grid-template-columns: auto auto;
     }
 
     .product-card {
